--- a/Source/Microsoft.Teams.Apps.AskHR/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.AskHR/appsettings.json
@@ -12,5 +12,9 @@
   "AccessCacheExpiryInDays": 5,
   "SearchIndexingIntervalInMinutes": 10,
   "APPINSIGHTS_INSTRUMENTATIONKEY": "",
-  "ASPNETCORE_ENVIRONMENT": ""
+  "ASPNETCORE_ENVIRONMENT": "",
+  "i18n": {
+    "DefaultCulture": "en",
+    "SupportedCultures": "en,es,fr,ja,ar"
+  }
 }
